refac(doc): #3397 certifications-fix-writing
- Periods from titles removed and paragraphs changed.


Former-commit-id: 23db0880e256b4a3f045bc415c9d6099d0e38e21

--- a/content/pages/services/certifications/index.adoc
+++ b/content/pages/services/certifications/index.adoc
@@ -11,30 +11,29 @@
 
 a|image::logo-oscp.png[logo oscp]
 
-a|== Offensive Security Certified Professional (OSCP).
+a|== Offensive Security Certified Professional (OSCP)
 
 `OSCP` is a professional certification in ethical hacking
 developed by `Offensive Security`.
-It's the world's first completely hands-on
+It is the world's first completely hands-on
 offensive information security certification.
-It requires the professional to prove that they have a clear
-and practical understanding of the penetration testing process
-and life-cycle through an arduous
-twenty-four (`24`) hours exam.
+It requires the professionals to prove
+that they have a clear understanding
+of the penetration testing process and life cycle
+through an arduous `24` hours of the exam.
 
-a|== Offensive Security Wireless Professional (OSWP).
+a|== Offensive Security Wireless Professional (OSWP)
 
 `OSWP` is the only professional certification
 in practical wireless attacks in the security field today.
-Through a hands-on exam, an `OSWP` must prove
-they have the skills to perform `802.11`
-wireless audits using open source tools.
+In a hands-on exam, an `OSWP` must prove they have the skills
+to do `802.11` wireless audits using open source tools.
 
 a|image::logo-oswp.png[logo oswp]
 
 a|image::logo-ceh.png[logo ceh]
 
-a|== Certified Ethical Hacker (CEH).
+a|== Certified Ethical Hacker (CEH)
 
 `CEH` is a professional certification
 by the International Electronic Commerce Council (`EC-Council`).
@@ -43,78 +42,73 @@ in the security discipline of ethical hacking.
 It is unaffiliated with any commercial entity
 and is considered independent and impartial.
 
-a|== Certified Information Systems Security Professional (CISSP).
+a|== Certified Information Systems Security Professional (CISSP)
 
-`CISSP` is a professional advanced certification awarded by the (`ISC`)
-International Information Systems Security Certification Consortium, Inc.
-to help companies acknowledge professionals
+`CISSP` is a professional advanced certification awarded by the
+International Information Systems Security Certification Consortium (`ISC`).
+It helps companies acknowledge professionals
 who obtain information security expertise.
-`CISSP` certification is required for the `ISSEP` program
-of the United States National Security Agency (`NSA`).
+`CISSP` is required for the `ISSEP` program
+of the `US` National Security Agency (`NSA`).
 
 a|image::logo-cissp.png[logo cissp]
 
 a|image::logo-cism.png[logo cism]
 
-a|== Certified Information Security Manager (CISM).
+a|== Certified Information Security Manager (CISM)
 
 `CISM` is a certification focused on management,
-promoting international security standard practices.
-This one accredits management professionals
-who manage, design, supervise,
-and assess the security of the information of a company.
+promoting global security standard practices.
+`CISM` accredits management professionals who lead, design, and assess
+the security of the information of a company.
 
-a|== Certified Information Systems Auditor (CISA).
+a|== Certified Information Systems Auditor (CISA)
 
-Internationally recognized certification
-for Information Systems audit control, assurance,
-and security professionals.
-`CISA` certification recognizes a professional's skills and experience
-to evaluate vulnerabilities, report on compliance,
-and enhance existing or establish new controls within a business.
+Internationally recognized certification for
+Information Systems audit control, assurance, and security professionals.
+`CISA` recognizes a professional's skills and experience
+to assess vulnerabilities, report on compliance,
+and enhance existing or establish new controls in a business.
 
 a|image::logo-cisa.png[logo cisa]
 
 a|image::logo-comptia.png[logo comptia]
 
-a|== CompTIA Security+.
+a|== CompTIA Security+
 
 This one is an internationally recognized certification
-by the Computing Technology Industry Association,
-a non-profit trade association.
-It certifies a professional has the core knowledge and skills
-necessary for practical security problem-solving.
-Typically, the starting point for a career in `IT` security.
+by the Computing Technology Industry Association, a non-profit trade union.
+It certifies a professional has the core knowledge and skills necessary
+for practical security problem-solving.
+Typically, the point of origin for a career in `IT` security.
 
-a|== GIAC Information Security Professional (GISP).
+a|== GIAC Information Security Professional (GISP)
 
 `GISP` is a certification for security professionals
 who want to expand their knowledge.
-It means to go beyond simple terminology and concepts
-to include practical applications and also demonstrate qualifications
-for `IT` systems' hands-on roles involving security tasks.
+It means to go beyond simple terminology and ideas
+to include practical applications.
+It is to get skills for `IT` systems' hands-on roles involving security tasks.
 
 a|image::logo-gisp.png[logo gisp]
 
 a|image::logo-itil.png[logo itil]
 
-a|== Information Technology Infrastructure Library Certification (ITIL).
+a|== Information Technology Infrastructure Library Certification (ITIL)
 
-`ITIL` is linked to a set of detailed practices
-for `IT` service management (`ITSM`)
+`ITIL` is linked to a set of practices for `IT` service management (`ITSM`)
 that focuses on aligning `IT` services with the needs of businesses.
-`ITIL` gives detailed descriptions
-of an extensive set of management procedures
+`ITIL` gives detailed descriptions of a large set of management procedures
 designed to help organizations
 achieve quality and efficiency in `IT` operations.
 
-a|== Certified Red Teaming Expert (CRTE).
+a|== Certified Red Teaming Expert (CRTE)
 
 The Certified (Windows) Red Teaming Expert
 is an entirely hands-on certification awarded by the Pentester Academy.
-This certification guarantees an individual with the expertise
-to evaluate the security of an unknown Windows infrastructure
-and recognize misconfigurations, and functionality and trust abuses.
+This certification guarantees a person with the expertise
+to assess the security of an unknown Windows infrastructure
+and recognize misconfigurations and abuses.
 
 a|image::logo-crte.png[logo crte]
 
