--- a/content/blog/cost-cybercrime-ii/index.adoc
+++ b/content/blog/cost-cybercrime-ii/index.adoc
@@ -168,10 +168,10 @@ and the expertise of a group of highly skilled security engineers.
 Check our [inner]#link:../../services/[hacking services]# and our [inner]#link:../../products/[products]#
 (there is one product you can access and use `FREE` of charge).
 Our distinctiveness lies in the approaches we offer to organizations,
-comprised of [inner]#link:../../services/continuous-hacking/[continuous hacking]# and [inner]#link:../../services/one-shot-hacking/[one-shot hacking]#.
+comprised of [inner]#link:../../use-cases/continuous-hacking/[continuous hacking]# and [inner]#link:../../use-cases/one-shot-hacking/[one-shot hacking]#.
 We detect weaknesses faster, featuring a rich characterization,
 and we also make it easier for clients
-to fix those defects through [inner]#link:../../products/integrates/[Integrates]# and [inner]#link:../../products/asserts/[Asserts]#.
+to fix those defects through [inner]#link:../../products/integrates/[Integrates]# and [inner]#link:../../asserts/[Asserts]#.
 
 Did you enjoy reading this post?
 We love to hear from our readers and customers.
