--- a/content/blog/smbs-bankruptcy/index.adoc
+++ b/content/blog/smbs-bankruptcy/index.adoc
@@ -171,12 +171,12 @@ As many of the cases reviewed here,
 it all began with one or more weaknesses exploited by an attacker.
 At `Fluid Attacks`, we excel in proactive security testing:
 
-- We are capable of #link:../../services/continuous-hacking/[continuosly hacking]#
+- We are capable of #link:../../use-cases/continuous-hacking/[continuously hacking]#
 enterprise-level systems. We can detect small changes
 that could pose risks to your business.
 We combine automated tools with the best-trained cybersecurity professionals.
 - We automate almost everything we know and do.
-Our product [inner]#link:../../products/asserts/[Asserts]#
+Our product [inner]#link:../../asserts/[Asserts]#
 allow us to evaluate the state of your systems quickly.
 - We store, describe, and track almost everything in
 #link:../../products/integrates/[Integrates]#,
