--- a/content/blog/conflict-interest/index.adoc
+++ b/content/blog/conflict-interest/index.adoc
@@ -19,7 +19,7 @@
 
 Years ago, we faced something odd in a project:
 a customer was putting pressure on us while performing a
-[inner]#link:../../services/one-shot-hacking/[One-Shot Hacking]#.
+[inner]#link:../../use-cases/one-shot-hacking/[One-Shot Hacking]#.
 The manager who hired us demanded preliminary results
 and made comments about how we should frame some of the findings, what to keep,
 and what to remove from the final report.
@@ -129,9 +129,9 @@ delivering value to our customers.
 We have been successful in helping them as independent and skilled auditors,
 typically performing the following:
 
-* [inner]#link:../../services/continuous-hacking/[Continuous hacking]#,
+* [inner]#link:../../use-cases/continuous-hacking/[Continuous hacking]#,
 a service to continuously check and improve robustness of defenses.
-* [inner]#link:../../services/one-shot-hacking/[One-shot hacking]#,
+* [inner]#link:../../use-cases/one-shot-hacking/[One-shot hacking]#,
 if a precise audit is needed.
 
 Our customers rely on
@@ -155,8 +155,7 @@ We are genuinely independent auditors because
 we do not provide design and operation of defenses for the market.
 Although we provide expert advice and curated resources
 on how to better protect information assets (check
-[inner]#link:../../products/rules/[Rules]#,
-it's FREE).
+[inner]#link:../../rules/[Rules]#, it's FREE).
 
 *Identify conflicts of interest and design environments to avoid them.*
 [role="fluid-qanda"]
