refac(doc): #3399 fix-link-rules
- Fixed a link to Rules on Security section.


Former-commit-id: d2320a4b46d992599c68a6e683b8dcfe225cd51c

--- a/content/pages/security/index.adoc
+++ b/content/pages/security/index.adoc
@@ -14,7 +14,7 @@ As a security company,
   [inner]#link:../values/[here]#);
 - developing products
   that comply with the highest worldwide
-  [inner]#link:../products/rules/[security standards]#;
+  [inner]#link:../rules/[security standards]#;
 - acquiring only
   [inner]#link:../rules/262/[compliant services and products for internal use]#;
 - implementing best security practices within our organization;
