--- a/content/pages/rules/source/173/index.adoc
+++ b/content/pages/rules/source/173/index.adoc
@@ -9,7 +9,7 @@
 == Requirement
 
 The system must discard all potentially harmful information
-obtained via data inputs.
+received via data inputs.
 
 == Description
 
@@ -201,44 +201,49 @@ or utilize templates that automatically contextually encode
 to ensure the application is not susceptible to reflected,
 stored or *DOM* Cross-Site Scripting (*XSS*) attacks.
 
-. [[r18]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.17]
-Verify that the application has defenses
-against *HTTP* parameter pollution attacks,
-particularly if the application framework makes no distinction
-about the source of request parameters
-(*GET*, *POST*, cookies, headers, environment, etc.)
-
-. [[r19]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.19]
-Verify that all input data is validated,
-not only *HTML* form fields but all sources of input such as *REST* calls,
-query parameters, *HTTP* headers, cookies, batch files, *RSS* feeds, etc;
-using positive validation (whitelisting),
-then lesser forms of validation such as grey listing
-(eliminating known bad strings),
-or rejecting bad inputs (blacklisting).
-
-. [[r20]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.20]
+. [[r18]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.20]
 Verify that structured data is strongly typed
 and validated against a defined schema including allowed characters,
 length and pattern (e.g. credit card numbers or telephone,
 or validating that two related fields are reasonable,
 such as validating suburbs and zip or post codes match).
 
-. [[r21]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.21]
+. [[r19]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.21]
 Verify that unstructured data is sanitized to enforce generic safety measures
 such as allowed characters and length,
 and characters potentially harmful in given context should be escaped
 (e.g. natural names with Unicode or apostrophes, such as ねこ or O'Hara).
 
-. [[r22]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.22]
+. [[r20]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.22]
 Verify that all untrusted *HTML* input from *WYSIWYG* editors or similar
 is properly sanitized with an *HTML* sanitizer library or framework feature.
 
-. [[r23]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r21]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.5 Input and Output Architectural Requirements.(1.5.3)]
 Verify that input validation is enforced on a trusted service layer.
 
-. [[r24]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r22]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.5 Input and Output Architectural Requirements.(1.5.4)]
 Verify that output encoding occurs close to or by the interpreter for which it
 is intended.
+
+. [[r23]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V5.1 Input Validation Requirements.(5.1.1)]
+Verify that the application has defenses against HTTP parameter pollution
+attacks,
+particularly if the application framework makes no distinction about the source
+of request parameters (*GET*, *POST*, cookies, headers,
+or environment variables).
+
+. [[r24]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V5.1 Input Validation Requirements.(5.1.3)]
+Verify that all input (*HTML* form fields, *REST* requests, *URL* parameters,
+*HTTP* headers, cookies, batch files, *RSS* feeds, etc) is validated using
+positive validation (*whitelisting*).
+
+. [[r25]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V5.1 Input Validation Requirements.(5.1.4)]
+Verify that structured data is strongly typed and validated against a defined
+schema including allowed characters, length and pattern
+(e.g. credit card numbers or telephone, or validating that two related fields
+are reasonable, such as checking that suburb and zip/postcode match).
