--- a/content/pages/rules/system/186/index.adoc
+++ b/content/pages/rules/system/186/index.adoc
@@ -39,7 +39,7 @@ an actor,
 creating an unintended sphere of control for that actor.
 
 . [[r3]] link:https://cwe.mitre.org/data/definitions/272.html[CWE-272: Least Privilege Violation].
-The elevated privilege level required to perform operations such as chroot()
+The elevated privilege level required to perform operations such as *chroot()*
 should be dropped immediately after the operation is performed.
 
 . [[r4]] link:https://cwe.mitre.org/data/definitions/276.html[CWE-276: Incorrect Default Permissions].
@@ -50,32 +50,36 @@ exposes it to an unintended actor.
 The software does not perform or incorrectly performs an authorization check
 when an actor attempts to access a resource or perform an action.
 
-. [[r6]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-6[NIST 800-53 AC-6]
+. [[r6]] link:https://cwe.mitre.org/data/definitions/732.html[CWE-732: Incorrect Permission Assignment for Critical Resource].
+The product specifies permissions for a security-critical resource in a way
+that allows that resource to be read or modified by unintended actors.
+
+. [[r7]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-6[NIST 800-53 AC-6]
 The organization employs the principle of least privilege,
 allowing only authorized accesses for users
 (or processes acting on behalf of users)
 which are necessary to accomplish assigned tasks
 in accordance with organizational missions and business functions.
 
-. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.2 Authentication Architectural Requirements.(1.2.1)]
 Verify the use of unique or special low-privilege operating system accounts for
 all application components, services, and servers.
 
-. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.4 Access Control Architectural Requirements.(1.4.3)]
 Verify enforcement of the principle of least privilege in functions,
-data files, URLs, controllers, services, and other resources.
-This implies protection against spoofing and elevation of privilege.
-
-. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
-V4.1 General Access Control Design.(4.1.3)]
-Verify that the principle of least privilege exists - users should only be able
-to access functions, data files, URLs, controllers, services, and other
-resources, for which they possess specific authorization.
+data files, **URL**s, controllers, services, and other resources.
 This implies protection against spoofing and elevation of privilege.
 
 . [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V4.1 General Access Control Design.(4.1.3)]
+Verify that the principle of least privilege exists - users should only be able
+to access functions, data files, **URL**s, controllers, services, and other
+resources, for which they possess specific authorization.
+This implies protection against spoofing and elevation of privilege.
+
+. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V4.1 General Access Control Design.(4.1.4)]
 Verify that the principle of deny by default exists whereby new users/roles
 start with minimal or no permissions and users/roles do not receive access to
